@@ -5,6 +5,7 @@ Changes to the Dwimmer system. See http://dwimmer.org/
     - Allow changing password. #21
     - Show old version when clicking on link in history #18
     - Add pagination to the list of pages #14
+    - dwimmer_setup.pl can now set the password of any user #25
 
 v0.20 2011.10.25
 
